--- a/index.html
+++ b/index.html
@@ -1,9 +1,127 @@
+<!--
+  Hecho en Cartagena Colombia por
+  Javier Antonio Llanos Marriaga
+  en el marco de la realizacion del
+  Homework del modulo M03 del PrepCouarse
+  de HENRY!
+-->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body></body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Javier's DEV Blog 🚀</title>
+  <link rel="icon" type="image/x-icon" href="favicon-16x16.png" />
+</head>
+
+<body>
+  <!--
+      Nota: "Antes de la creación de CSS, los elementos HTML <table>
+      eran frecuentemente utilizados para la disposición (posicionamiento)
+      de una página. Este uso ha sido desalentado desde HTML 4, y el elemento
+      no debe ser usado para dichos fines."
+
+      Fuente: https://developer.mozilla.org/es/docs/Web/HTML/Element/table
+
+      El uso de las tablas de esta manera y ciertos atributos deprecados es solo
+      por el reto auto-impuesto de hacer un nav-sidebar jugando con los limites de html!
+    -->
+  <table>
+    <thead>
+      <tr>
+        <th colspan="2">
+          <header>
+            <h1>My DEV blog 👨🏻‍💻</h1>
+            <p>The purpose of this blog is to make a little known of my expected as a developer and some tips!</p>
+            <hr>
+          </header>
+        </th>
+      </tr>
+      <tr>
+        <th colspan="1">
+          MAP↴
+        </th>
+        <th colspan="1">HOME</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td valign="top">
+          <aside>
+            <br>
+            <nav>
+              <div>
+                <a href="./index.html">Home</a>
+              </div>
+              <div>
+                <a href="./blog.html">Blog</a>
+              </div>
+              <div>
+                <a href="./projects.html">Projects</a>
+              </div>
+              <div>
+                <a href="./aboutme.html">About</a>
+              </div>
+              <!--
+                <ul>
+                <il>
+                  <div>
+                    <a href="./index.html">Home</a>
+                  </div>
+                </il>
+                <il>
+                  <div>
+                    <a href="./blog.html">Blog</a>
+                  </div>
+                </il>
+                <il>
+                  <div>
+                    <a href="./projects.html">Projects</a>
+                  </div>
+                </il>
+                <il>
+                  <div>
+                    <a href="./aboutme.html">About</a>
+                  </div>
+                </il>
+              </ul>
+              -->
+            </nav>
+          </aside>
+        </td>
+        <td>
+          <main>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, ad quae saepe enim voluptate nulla
+              recusandae, officiis odio labore maiores sed sapiente. A aspernatur commodi nesciunt dolorem voluptatem
+              consequuntur reprehenderit.
+              Corporis illum magni fugit dolore porro maxime nobis quis modi ipsa esse rem debitis quo, labore placeat
+              cupiditate libero voluptas ratione minima eius, fugiat officiis quisquam nisi! Accusamus, delectus
+              expedita.
+              Eaque quasi ipsam explicabo libero reprehenderit. Magnam, dicta nihil. Recusandae repellat error impedit
+              itaque perferendis soluta ducimus placeat ab iure totam. Blanditiis omnis sunt odio quisquam saepe
+              quibusdam
+              quis consectetur!
+              Fugiat, laboriosam corporis vitae libero ea blanditiis laborum eius labore ex quo architecto nostrum
+              doloribus assumenda esse ipsam, eum reiciendis placeat accusantium repellendus mollitia quod commodi nam!
+              Obcaecati, consequuntur laboriosam?
+              Voluptas vitae hic ducimus velit voluptatibus, ut cupiditate laborum ipsum sequi laudantium, nam
+              laboriosam
+              quia fugiat dolor animi eligendi exercitationem nesciunt dolorum! Ratione hic pariatur, voluptatum laborum
+              doloribus reiciendis corrupti.</p>
+          </main>
+        </td>
+      </tr>
+    </tbody>
+    <tfoot>
+      <tr>
+        <td colspan="2" align="center">
+          <hr>
+          <footer>Javier Llanos ~ 2023 ~ Todos los derechos reservados.</footer>
+        </td>
+      </tr>
+    </tfoot>
+  </table>
+</body>
+
 </html>
