added content and some tweaks

--- a/index.html
+++ b/index.html
@@ -9,119 +9,121 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Javier's DEV Blog 🚀</title>
-  <link rel="icon" type="image/x-icon" href="favicon-16x16.png" />
+	<meta charset="UTF-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Welcome to the Javier's DEV Blog 🚀</title>
+	<link rel="icon" type="image/x-icon" href="favicon-16x16.png" />
 </head>
 
 <body>
-  <!--
-      Nota: "Antes de la creación de CSS, los elementos HTML <table>
-      eran frecuentemente utilizados para la disposición (posicionamiento)
-      de una página. Este uso ha sido desalentado desde HTML 4, y el elemento
-      no debe ser usado para dichos fines."
+	<header>
+		<h1>My DEV blog 👨🏻‍💻</h1>
+		<p>
+			<b>The purpose of this blog is to share my experience as a developer and some tips!</b>
+		</p>
+	</header>
 
-      Fuente: https://developer.mozilla.org/es/docs/Web/HTML/Element/table
+	<hr>
+	<hr>
+	<aside>
+		<nav>
+			<span>
+				▶Home◀
+			</span>
+			<span>
+				<a href="./blog.html">Blog</a>
+			</span>
+			<span>
+				<a href="./projects.html">Projects</a>
+			</span>
+			<span>
+				<a href="./aboutme.html">About</a>
+			</span>
+			<span>
+				<a href="./index2.html">Home_Ex</a></span>
+		</nav>
+	</aside>
+	<hr>
+	<hr>
 
-      El uso de las tablas de esta manera y ciertos atributos deprecados es solo
-      por el reto auto-impuesto de hacer un nav-sidebar jugando con los limites de html!
-    -->
-  <table>
-    <thead>
-      <tr>
-        <th colspan="2">
-          <header>
-            <h1>My DEV blog 👨🏻‍💻</h1>
-            <p>The purpose of this blog is to make a little known of my expected as a developer and some tips!</p>
-            <hr>
-          </header>
-        </th>
-      </tr>
-      <tr>
-        <th colspan="1">
-          MAP↴
-        </th>
-        <th colspan="1">HOME</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td valign="top">
-          <aside>
-            <br>
-            <nav>
-              <div>
-                <a href="./index.html">Home</a>
-              </div>
-              <div>
-                <a href="./blog.html">Blog</a>
-              </div>
-              <div>
-                <a href="./projects.html">Projects</a>
-              </div>
-              <div>
-                <a href="./aboutme.html">About</a>
-              </div>
-              <!--
-                <ul>
-                <il>
-                  <div>
-                    <a href="./index.html">Home</a>
-                  </div>
-                </il>
-                <il>
-                  <div>
-                    <a href="./blog.html">Blog</a>
-                  </div>
-                </il>
-                <il>
-                  <div>
-                    <a href="./projects.html">Projects</a>
-                  </div>
-                </il>
-                <il>
-                  <div>
-                    <a href="./aboutme.html">About</a>
-                  </div>
-                </il>
-              </ul>
-              -->
-            </nav>
-          </aside>
-        </td>
-        <td>
-          <main>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, ad quae saepe enim voluptate nulla
-              recusandae, officiis odio labore maiores sed sapiente. A aspernatur commodi nesciunt dolorem voluptatem
-              consequuntur reprehenderit.
-              Corporis illum magni fugit dolore porro maxime nobis quis modi ipsa esse rem debitis quo, labore placeat
-              cupiditate libero voluptas ratione minima eius, fugiat officiis quisquam nisi! Accusamus, delectus
-              expedita.
-              Eaque quasi ipsam explicabo libero reprehenderit. Magnam, dicta nihil. Recusandae repellat error impedit
-              itaque perferendis soluta ducimus placeat ab iure totam. Blanditiis omnis sunt odio quisquam saepe
-              quibusdam
-              quis consectetur!
-              Fugiat, laboriosam corporis vitae libero ea blanditiis laborum eius labore ex quo architecto nostrum
-              doloribus assumenda esse ipsam, eum reiciendis placeat accusantium repellendus mollitia quod commodi nam!
-              Obcaecati, consequuntur laboriosam?
-              Voluptas vitae hic ducimus velit voluptatibus, ut cupiditate laborum ipsum sequi laudantium, nam
-              laboriosam
-              quia fugiat dolor animi eligendi exercitationem nesciunt dolorum! Ratione hic pariatur, voluptatum laborum
-              doloribus reiciendis corrupti.</p>
-          </main>
-        </td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td colspan="2" align="center">
-          <hr>
-          <footer>Javier Llanos ~ 2023 ~ Todos los derechos reservados.</footer>
-        </td>
-      </tr>
-    </tfoot>
-  </table>
+	<main>
+		<section>
+			<article>
+				<!-- The introduction of this blog has been generated using bingchat! -->
+				<h2>Welcome to my developer blog!</h2>
+				<figure>
+					<img title="Profile photo" src="./assets/profilePhoto.png" alt="My profile photo" height=100>
+					<figcaption>
+						<i>This is me!</i>
+					</figcaption>
+				</figure>
+				<p>
+					Hi,
+					<br>
+					My name is Javier Llanos.
+				</p>
+				<p>
+					I'm excited to have you here. This blog is dedicated to providing you with the
+					latest
+					and greatest in web development. Whether you're a seasoned developer or just starting out, you'll find
+					something
+					here to help you grow your skills and stay up-to-date with the latest trends.
+				</p>
+				<p>
+					I believe that the best way to learn is by doing, so I'll be sharing plenty of hands-on tutorials and code
+					snippets
+					to help you get started. I'll also be sharing my thoughts on the latest web development news and trends, so
+					you
+					can
+					stay ahead of the curve.
+				</p>
+				<p>
+					But this blog isn't just about me. It's about building a community of developers who can learn from each other
+					and
+					grow together. So I encourage you to share your thoughts and ideas in the comments section. Let's build
+					something
+					great together!
+				</p>
+				<p>
+					In addition to web development, I'll also be sharing my thoughts on related topics such as software
+					engineering,
+					user experience design, and project management. I believe that a well-rounded developer is a better developer,
+					so
+					I
+					encourage you to explore these topics as well.
+				</p>
+				Finally, I want to thank you for taking the time to visit my blog. I know there are a lot of resources out
+				there,
+				and I'm honored that you've chosen to spend some of your valuable time here. I hope you find the content useful
+				and
+				engaging, and I look forward to hearing your feedback.aging, and I look forward to hearing your feedback.
+				</p>
+				<p>Happy coding! 💻</p>
+				<i><small>Text generated with Microsoft BingCHAT!</small></i>
+			</article>
+		</section>
+	</main>
+
+	<footer>
+		<hr>
+		<hr>
+		<div id="social_links">
+			<span>
+				<a href="https://www.linkedin.com/in/javierllns/" title="LinkedIn">
+					<img src="./assets/devicon-linkedin.svg" alt="linkedin-icon" height=20>
+				</a>
+			</span>
+			<span>
+				<a href="https://github.com/javierllns" title="GitHub">
+					<img src="./assets/skill-icons-github-dark.svg" alt="github-icon" height=20>
+				</a>
+			</span>
+		</div>
+		<hr>
+		<hr>
+
+		<span>Javier Llanos ~ 2023 ~ All rights reserved.</span>
+	</footer>
 </body>
 
 </html>
