--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<header>
+	<header id="header">
 		<h1>My DEV blog 👨🏻‍💻</h1>
 		<p>
 			<b>The purpose of this blog is to share my experience as a developer and some tips!</b>
@@ -102,6 +102,9 @@
 				<i><small>Text generated with Microsoft BingCHAT!</small></i>
 			</article>
 		</section>
+		<p>
+			<a href="#header">UP!▲</a>
+		</p>
 	</main>
 
 	<footer>
