--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-	<header>
+	<header id="header">
 		<h1>My DEV blog 👨🏻‍💻</h1>
 		<p>
 			<b>The purpose of this blog is to share my experience as a developer and some tips!</b>
@@ -92,6 +92,9 @@
 				</p>
 			</article>
 		</section>
+		<p>
+			<a href="#header">UP!▲</a>
+		</p>
 	</main>
 
 	<footer>
