--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!--
   Hecho en Cartagena Colombia por
   Javier Antonio Llanos Marriaga
-  en el marco de la realizacion del
-  Homework del modulo M03 del PrepCouarse
+  en el marco de la realización del
+  Homework del modulo M03 del PrepCourse
   de HENRY!
 -->
 <!DOCTYPE html>
@@ -49,7 +49,7 @@
 	<main>
 		<section>
 			<article>
-				<!-- The introduction of this blog has been generated using bingchat! -->
+				<!-- The introduction of this blog has been generated using BingChat! -->
 				<h2>Welcome to my developer blog!</h2>
 				<figure>
 					<img title="Profile photo" src="./assets/profilePhoto.png" alt="My profile photo" height=100>
