--- a/projects.html
+++ b/projects.html
@@ -1,8 +1,8 @@
 <!--
   Hecho en Cartagena Colombia por
   Javier Antonio Llanos Marriaga
-  en el marco de la realizacion del
-  Homework del modulo M03 del PrepCouarse
+  en el marco de la realización del
+  Homework del modulo M03 del PrepCourse
   de HENRY!
 -->
 <!DOCTYPE html>
@@ -57,17 +57,17 @@
 					Technologies used:
 				</p>
 				<ul>
-					<li>Electronjs</li>
+					<li>ElectronJS</li>
 					<li>Typescript</li>
 					<li>React</li>
-					<li>Tailwindcss</li>
+					<li>TailwindCSS</li>
 					<li>Vite</li>
 				</ul>
 				<figure>
 					<img src="./assets/synergia-design.PNG" alt="Synergia Design Figma" height="350"
-						title="Synergia Sidebar On figma">
+						title="Synergia Sidebar On Figma">
 					<figcaption>
-						<i><small>Synergia Sidebar On figma.</small></i>
+						<i><small>Synergia Sidebar On Figma.</small></i>
 					</figcaption>
 				</figure>
 				<p>
@@ -81,7 +81,7 @@
 
 			<article>
 				<h3>Prestamator</h3>
-				<p>Electronjs-based lender program.</p>
+				<p>ElectronJS-based lender program.</p>
 				<p>
 					progress: ▰▰▰▰▰▰▱▱▱▱▱▱
 					<br>
