--- a/index2.html
+++ b/index2.html
@@ -1,8 +1,8 @@
 <!--
   Hecho en Cartagena Colombia por
   Javier Antonio Llanos Marriaga
-  en el marco de la realizacion del
-  Homework del modulo M03 del PrepCouarse
+  en el marco de la realización del
+  Homework del modulo M03 del PrepCourse
   de HENRY!
 -->
 <!DOCTYPE html>
