--- a/index.html
+++ b/index.html
@@ -13,120 +13,130 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Welcome to the Javier's DEV Blog 🚀</title>
 	<link rel="icon" type="image/x-icon" href="favicon-16x16.png" />
+	<link rel="stylesheet" href="./styles.css">
 </head>
 
-<body>
-	<header id="header">
-		<h1>My DEV blog 👨🏻‍💻</h1>
-		<p>
-			<b>The purpose of this blog is to share my experience as a developer and some tips!</b>
-		</p>
-	</header>
+<body class="stack">
+	<div class="page-container">
+		<header id="header">
+			<div class="stack page-title text-center">
+				<h1>MY DEV <span>BLOG</span></h1>
+				<p>
+					<b>The purpose of this blog is to share my experience as a developer and some tips!</b>
+				</p>
+			</div>
+		</header>
 
-	<hr>
-	<hr>
-	<aside>
-		<nav>
-			<span>
-				▶Home◀
-			</span>
-			<span>
-				<a href="./blog.html">Blog</a>
-			</span>
-			<span>
-				<a href="./projects.html">Projects</a>
-			</span>
-			<span>
-				<a href="./aboutme.html">About</a>
-			</span>
-			<span>
-				<a href="./index2.html">Home_Ex</a></span>
-		</nav>
-	</aside>
-	<hr>
-	<hr>
-
-	<main>
-		<section>
-			<article>
-				<!-- The introduction of this blog has been generated using BingChat! -->
-				<h2>Welcome to my developer blog!</h2>
-				<figure>
-					<img title="Profile photo" src="./assets/profilePhoto.png" alt="My profile photo" height=100>
-					<figcaption>
-						<i>This is me!</i>
-					</figcaption>
-				</figure>
-				<p>
-					Hi,
-					<br>
-					My name is Javier Llanos.
-				</p>
-				<p>
-					I'm excited to have you here. This blog is dedicated to providing you with the
-					latest
-					and greatest in web development. Whether you're a seasoned developer or just starting out, you'll find
-					something
-					here to help you grow your skills and stay up-to-date with the latest trends.
-				</p>
-				<p>
-					I believe that the best way to learn is by doing, so I'll be sharing plenty of hands-on tutorials and code
-					snippets
-					to help you get started. I'll also be sharing my thoughts on the latest web development news and trends, so
-					you
-					can
-					stay ahead of the curve.
-				</p>
-				<p>
-					But this blog isn't just about me. It's about building a community of developers who can learn from each other
-					and
-					grow together. So I encourage you to share your thoughts and ideas in the comments section. Let's build
-					something
-					great together!
-				</p>
-				<p>
-					In addition to web development, I'll also be sharing my thoughts on related topics such as software
-					engineering,
-					user experience design, and project management. I believe that a well-rounded developer is a better developer,
-					so
-					I
-					encourage you to explore these topics as well.
-				</p>
-				Finally, I want to thank you for taking the time to visit my blog. I know there are a lot of resources out
-				there,
-				and I'm honored that you've chosen to spend some of your valuable time here. I hope you find the content useful
-				and
-				engaging, and I look forward to hearing your feedback.aging, and I look forward to hearing your feedback.
-				</p>
-				<p>Happy coding! 💻</p>
-				<i><small>Text generated with Microsoft BingCHAT!</small></i>
-			</article>
-		</section>
-		<p>
-			<a href="#header">UP!▲</a>
-		</p>
-	</main>
-
-	<footer>
 		<hr>
 		<hr>
-		<div id="social_links">
-			<span>
-				<a href="https://www.linkedin.com/in/javierllns/" title="LinkedIn">
-					<img src="./assets/devicon-linkedin.svg" alt="linkedin-icon" height=20>
-				</a>
-			</span>
-			<span>
-				<a href="https://github.com/javierllns" title="GitHub">
-					<img src="./assets/skill-icons-github-dark.svg" alt="github-icon" height=20>
-				</a>
-			</span>
-		</div>
+		<aside class="stack">
+			<nav class="navigation">
+				<span>
+					▶ Home ◀
+				</span>
+				<span>
+					<a href="./blog.html">Blog</a>
+				</span>
+				<span>
+					<a href="./projects.html">Projects</a>
+				</span>
+				<span>
+					<a href="./aboutme.html">About</a>
+				</span>
+				<span>
+					<a href="./index2.html">Home_Ex</a>
+				</span>
+			</nav>
+		</aside>
 		<hr>
 		<hr>
 
-		<span>Javier Llanos ~ 2023 ~ All rights reserved.</span>
-	</footer>
+		<main class="main-content">
+			<section>
+				<article>
+					<!-- The introduction of this blog has been generated using BingChat! -->
+					<h1 class="text-center">Welcome to my developer blog!</h1>
+					<figure id="profile-picture">
+						<img title="Profile photo" src="./assets/profilePhoto.png" alt="My profile photo" height=100>
+						<figcaption class="text-center">
+							<i>This is me!</i>
+						</figcaption>
+					</figure>
+					<p>
+						<b>Hi,</b>
+						<br>
+						My name is Javier Llanos.
+					</p>
+					<p>
+						I'm excited to have you here. This blog is dedicated to providing you with the
+						latest
+						and greatest in web development. Whether you're a seasoned developer or just starting out, you'll find
+						something
+						here to help you grow your skills and stay up-to-date with the latest trends.
+					</p>
+					<p>
+						I believe that the best way to learn is by doing, so I'll be sharing plenty of hands-on tutorials and code
+						snippets
+						to help you get started. I'll also be sharing my thoughts on the latest web development news and trends, so
+						you
+						can
+						stay ahead of the curve.
+					</p>
+					<p>
+						But this blog isn't just about me. It's about building a community of developers who can learn from each
+						other
+						and
+						grow together. So I encourage you to share your thoughts and ideas in the comments section. Let's build
+						something
+						great together!
+					</p>
+					<p>
+						In addition to web development, I'll also be sharing my thoughts on related topics such as software
+						engineering,
+						user experience design, and project management. I believe that a well-rounded developer is a better
+						developer,
+						so
+						I
+						encourage you to explore these topics as well.
+					</p>
+					<p>
+						Finally, I want to thank you for taking the time to visit my blog. I know there are a lot of resources out
+						there,
+						and I'm honored that you've chosen to spend some of your valuable time here. I hope you find the content
+						useful
+						and
+						engaging, and I look forward to hearing your feedback.aging, and I look forward to hearing your feedback.
+					</p>
+					<p>Happy coding! 💻</p>
+					<i><small>Text generated with Microsoft BingCHAT!</small></i>
+				</article>
+			</section>
+			<p class="stack">
+				<a id="up-button" class="text-center" href="#header">UP!▲</a>
+			</p>
+		</main>
+
+		<footer class="page-footer text-center">
+			<hr>
+			<hr>
+			<div id="social-links">
+				<span>
+					<a href="https://www.linkedin.com/in/javierllns/" title="LinkedIn">
+						<img src="./assets/devicon-linkedin.svg" alt="linkedin-icon" height=20>
+					</a>
+				</span>
+				<span>
+					<a href="https://github.com/javierllns" title="GitHub">
+						<img src="./assets/skill-icons-github-dark.svg" alt="github-icon" height=20>
+					</a>
+				</span>
+			</div>
+			<hr>
+			<hr>
+
+			<span>Javier Llanos ~ 2023 ~ All rights reserved.</span>
+		</footer>
+	</div>
 </body>
 
 </html>
