--- a/projects.html
+++ b/projects.html
@@ -13,110 +13,126 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>Projects ~ Javier's DEV Blog 🚀</title>
 	<link rel="icon" type="image/x-icon" href="favicon-16x16.png" />
+	<link rel="stylesheet" href="./styles.css">
 </head>
 
-<body>
-	<header id="header">
-		<h1>My DEV blog 👨🏻‍💻</h1>
-		<p>
-			<b>The purpose of this blog is to share my experience as a developer and some tips!</b>
-		</p>
-	</header>
-
-	<hr>
-	<hr>
-	<aside>
-		<nav>
-			<span>
-				<a href="./index.html">Home</a>
-			</span>
-			<span>
-				<a href="./blog.html">Blog</a>
-			</span>
-			<span>
-				▶Projects◀
-			</span>
-			<span>
-				<a href="./aboutme.html">About</a>
-			</span>
-			<span>
-				<a href="./index2.html">Home_Ex</a></span>
-		</nav>
-	</aside>
-	<hr>
-	<hr>
-
-	<main>
-		<section>
-			<article>
-				<h3>Synergia desktop</h3>
+<body class="stack">
+	<div class="page-container">
+		<header id="header">
+			<div class="stack page-title text-center">
+				<h1>MY DEV <span>BLOG</span></h1>
 				<p>
-					Powerful ElectronJS-based enterprise resource planning software (ERP).
-					<br>
-					<br>
-					Technologies used:
+					<b>The purpose of this blog is to share my experience as a developer and some tips!</b>
 				</p>
-				<ul>
-					<li>ElectronJS</li>
-					<li>Typescript</li>
-					<li>React</li>
-					<li>TailwindCSS</li>
-					<li>Vite</li>
-				</ul>
-				<figure>
-					<img src="./assets/synergia-design.PNG" alt="Synergia Design Figma" height="350"
-						title="Synergia Sidebar On Figma">
-					<figcaption>
-						<i><small>Synergia Sidebar On Figma.</small></i>
-					</figcaption>
-				</figure>
-				<p>
-					progress: ▰▰▰▱▱▱▱▱▱▱▱▱
-					<br>
-					<br>
-					[private repository]
-				</p>
-			</article>
+			</div>
+		</header>
+
+		<hr>
+		<hr>
+		<aside class="stack">
+			<nav class="navigation">
+				<span>
+					<a href="./index.html">Home</a>
+				</span>
+				<span>
+					<a href="./blog.html">Blog</a>
+				</span>
+				<span>
+					▶ Projects ◀
+				</span>
+				<span>
+					<a href="./aboutme.html">About</a>
+				</span>
+				<span>
+					<a href="./index2.html">Home_Ex</a>
+				</span>
+			</nav>
+		</aside>
+		<hr>
+		<hr>
+
+		<main class="main-content">
+			<section>
+				<article>
+					<h3>Synergia desktop</h3>
+					<p>
+						Powerful ElectronJS-based enterprise resource planning software (ERP).
+						<br>
+						<br>
+						Technologies used:
+					</p>
+					<ul>
+						<li>
+							<p>ElectronJS</p>
+						</li>
+						<li>
+							<p>Typescript</p>
+						</li>
+						<li>
+							<p>React</p>
+						</li>
+						<li>
+							<p>TailwindCSS</p>
+						</li>
+						<li>
+							<p>Vite</p>
+						</li>
+					</ul>
+					<figure>
+						<img src="./assets/synergia-design.PNG" alt="Synergia Design Figma" height="350"
+							title="Synergia Sidebar On Figma" data-responsive>
+						<figcaption>
+							<i><small>Synergia Sidebar On Figma.</small></i>
+						</figcaption>
+					</figure>
+					<p>
+						progress: ▰▰▰▱▱▱▱▱▱▱▱▱
+						<br>
+						<br>
+						[private repository]
+					</p>
+				</article>
+				<hr>
+
+				<article>
+					<h3>Prestamator</h3>
+					<p>ElectronJS-based lender program.</p>
+					<p>
+						progress: ▰▰▰▰▰▰▱▱▱▱▱▱
+						<br>
+						<br>
+						[preview not available]
+						<br>
+						[private repository]
+					</p>
+				</article>
+			</section>
+			<p class="stack">
+				<a id="up-button" class="text-center" href="#header">UP!▲</a>
+			</p>
+		</main>
+
+		<footer class="page-footer text-center">
+			<hr>
+			<hr>
+			<div id="social-links">
+				<span>
+					<a href="https://www.linkedin.com/in/javierllns/" title="LinkedIn">
+						<img src="./assets/devicon-linkedin.svg" alt="linkedin-icon" height=20>
+					</a>
+				</span>
+				<span>
+					<a href="https://github.com/javierllns" title="GitHub">
+						<img src="./assets/skill-icons-github-dark.svg" alt="github-icon" height=20>
+					</a>
+				</span>
+			</div>
+			<hr>
 			<hr>
 
-			<article>
-				<h3>Prestamator</h3>
-				<p>ElectronJS-based lender program.</p>
-				<p>
-					progress: ▰▰▰▰▰▰▱▱▱▱▱▱
-					<br>
-					<br>
-					[preview not available]
-					<br>
-					[private repository]
-				</p>
-			</article>
-		</section>
-		<p>
-			<a href="#header">UP!▲</a>
-		</p>
-	</main>
-
-	<footer>
-		<hr>
-		<hr>
-		<div id="social_links">
-			<span>
-				<a href="https://www.linkedin.com/in/javierllns/" title="LinkedIn">
-					<img src="./assets/devicon-linkedin.svg" alt="linkedin-icon" height=20>
-				</a>
-			</span>
-			<span>
-				<a href="https://github.com/javierllns" title="GitHub">
-					<img src="./assets/skill-icons-github-dark.svg" alt="github-icon" height=20>
-				</a>
-			</span>
-		</div>
-		<hr>
-		<hr>
-
-		<span>Javier Llanos ~ 2023 ~ All rights reserved.</span>
-	</footer>
+			<span>Javier Llanos ~ 2023 ~ All rights reserved.</span>
+		</footer>
+	</div>
 </body>
 
 </html>
